--- a/doc/style.css
+++ b/doc/style.css
@@ -68,7 +68,7 @@ th { font-weight: bold; text-align: left; }
 a:link, a:visited { text-decoration: underline; }
 a:hover, a:focus { text-decoration: none; }
 a:link { color: dodgerblue; }
-a:visited { color: royalblue; }
+a:visited { color: #0063D6; }
 a:link.toc-backref, a:visited.toc-backref {
     text-decoration: none;
     color: inherit;  /* NOTE: `inherit' is not supported by IE6 */
